# screen-timer

./: CMakeLists.txt  LICENSE  README.md
gui/LabelElement/: labelElement.cpp  labelElement.h
gui/MouseHandle/: mouseHandle.cpp  mouseHandle.h
gui/TextBox/: textBox.cpp  textBox.h
gui/UIElement/: elementList.h  uiElement.cpp  uiElement.h
src/: main.cpp
src/RenderHandler/: renderHandler.cpp  renderHandler.h
